# GraphRAG

./: README.md  pyproject.toml
backend/: app.py  config.py  graph_builder.py
data/: ai_papers.txt
notebooks/: graph_demo.html  knowledge_graph_demo.ipynb
